--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "mongoose": "4.7.4",
     "morgan": "1.7.0",
     "nodemailer": "4.6.3",
+    "twilio": "^3.15.0",
     "winston": "2.3.0"
   },
   "devDependencies": {
