--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   ],
   "dependencies": {
     "axios": "0.18.0",
+    "babel-runtime": "^6.26.0",
     "bluebird": "3.4.6",
     "body-parser": "1.15.2",
     "compression": "1.6.2",
@@ -69,10 +70,15 @@
   },
   "devDependencies": {
     "babel-cli": "6.18.0",
-    "babel-core": "6.18.0",
+    "babel-core": "^6.18.0",
+    "babel-loader": "^7.1.4",
     "babel-plugin-add-module-exports": "0.2.1",
-    "babel-preset-es2015": "6.16.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "6.18.0",
+    "babel-register": "^6.26.0",
     "chai": "^3.4.1",
     "commitizen": "^2.9.2",
     "coveralls": "^2.11.6",
